--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Hello, World!</h1>
     <div>My name is Jesse Saroca</div>
     <div>My favorite hobby is rock climbing</div>
+    <div>My favorite game is Team Fortress 2</div>
 </body>
 </html>
+
